# bank-assistant-system

./: README.md  REAMD.MD
category/backend/: db_settting.md  temp_cp.md
category/smartglass/: README.md
cv/: make_example.md
cv/testCV/: CMakeLists.txt  Makefile  cmake_install.cmake
cv/testCV/faceAnal/: CMakeCache.txt  cmake_install.cmake  main.cpp
cv/testCV/faceMark/: detect_mser  dis_optical  ex.sh  face_feature  main.cpp  motion_change  pointing_on_face_softly.cpp  pupil_test.cpp  renderFace.hpp  select3obj  trainface  uki_netFaceland.cpp
cv/testCV/faceMark/test/: haha  main.cpp
cv/testCV/study/: cameraIn.cpp
cv/testCV/동공움직임/: find_trackEys.cpp  trackeye_opticalflow.cpp  tracking_opticalflow  uki_optical_direction.cpp
cv/testCV/얼굴_눈인식/: facedetect
cv/에러잡기/: README.md
doc/: uki_deploy.uxf
doc/Documentation/: index.html
doc/Theme/: advanced_form_components.html  advanced_table.html  basic_table.html  blank.html  buttons.html  calendar.html  chartjs.html  chat_room.html  dropzone.html  faq.html  file_upload.html  form_component.html  form_validation.html  gallery.html  general.html  google_maps.html  inbox.html  inline_editor.html  invoice.html  lobby.html  mail_compose.html  mail_view.html  morris.html  panels.html  pricing_table.html  profile.html  responsive_table.html  todo_list.html
doc/uml/: uki_activity_front.uxf  uki_deployment_ver1.0.uxf  uki_deployment_ver1.1.uxf  uki_deployment_ver1.2.uxf  (+2 more)
local/: package-lock.json
machine_learning/: ML_1.md
교육/: 190611KB_API해커톤.md  190618_KB교육.md  코드.md
기획서조사/: 1차시장조사.odt
조사/: blueprint.md
(+246 files in other folders)
